--- a/.github/workflows/md-to-pdf.yml
+++ b/.github/workflows/md-to-pdf.yml
@@ -57,7 +57,7 @@ jobs:
             markdown-it-emoji@2.0.2
 
       # 4️⃣ יצירת סקריפט ההמרה convert.js
-      - name: Write convert.js (root scan + RTL + highlight + detailed logging)
+      - name: Write convert.js (repo-root scan + safe plugins + RTL + highlight)
         run: |
           cat > tools/mdpdf/convert.js << 'EOF'
           const fs = require('fs');
@@ -66,6 +66,7 @@ jobs:
           const MarkdownIt = require('markdown-it');
           const hljs = require('highlight.js');
 
+          // Plugins (CJS/ESM-safe just in case)
           const mdFootnoteMod = require('markdown-it-footnote');
           const mdEmojiMod = require('markdown-it-emoji');
           const asPlugin = (mod) => (typeof mod === 'function' ? mod : (mod && mod.default) ? mod.default : mod);
@@ -89,9 +90,9 @@ jobs:
             .use(asPlugin(mdEmojiMod));
 
           // RTL detect
-          function isRTL(content) { return /[\u0590-\u05FF]/.test(content); }
+          const isRTL = (s) => /[\u0590-\u05FF]/.test(s);
 
-          // עטיפת HTML בסיסית
+          // HTML wrapper
           function wrapHtml(bodyHtml, rtl) {
             const dirAttr = rtl ? 'dir="rtl"' : 'dir="ltr"';
             return `<!doctype html>
@@ -110,43 +111,51 @@ jobs:
             </html>`;
           }
 
-          // סריקה של קבצי MD משורש הריפו בלבד
+          // helpers
+          const MDPDF_DIR = path.resolve(__dirname);               // tools/mdpdf/*
+          const isInMdpdf = (p) => {
+            const full = path.resolve(p);
+            return full === MDPDF_DIR || full.startsWith(MDPDF_DIR + path.sep);
+          };
+          const contains = (p, seg) => p.split(path.sep).includes(seg);
+
+          // walk repo root and collect .md (excluding mdpdf/node_modules/.git/.github/venv/.venv)
           function collectMarkdownFiles(startDir) {
-            const results = [];
-            const MDPDF_DIR = path.resolve(__dirname);
-
-            const isInMdpdf = (p) => {
-              const full = path.resolve(p);
-              return full === MDPDF_DIR || full.startsWith(MDPDF_DIR + path.sep);
-            };
-
+            const out = [];
             function walk(dir) {
+              // directory-level excludes
               if (isInMdpdf(dir)) return;
-              if (dir.includes('node_modules')) return;
-              if (dir.includes('.github')) return;
-              if (dir.includes('.git')) return;
-              if (dir.includes('venv')) return;
-              if (dir.includes('.venv')) return;
+              if (contains(dir, 'node_modules')) return;
+              if (contains(dir, '.git')) return;
+              if (contains(dir, '.github')) return;
+              if (contains(dir, 'venv')) return;
+              if (contains(dir, '.venv')) return;
 
               for (const entry of fs.readdirSync(dir, { withFileTypes: true })) {
                 const full = path.join(dir, entry.name);
                 if (entry.isDirectory()) {
                   walk(full);
-                } else if (entry.isFile() && entry.toLowerCase().endsWith('.md')) {
-                  if (!isInMdpdf(full)) results.push(full);
+                } else if (entry.isFile()) {
+                  // file-level excludes + extension check (FIX: use entry.name)
+                  if (isInMdpdf(full)) continue;
+                  if (contains(full, 'node_modules')) continue;
+                  if (entry.name.toLowerCase().endsWith('.md')) out.push(full);
                 }
               }
             }
             walk(startDir);
-            return results;
+            return out;
           }
 
           (async function main() {
-            const ROOT = path.resolve(__dirname, '..', '..');
+            const ROOT = path.resolve(__dirname, '..', '..');      // repo root
             const files = collectMarkdownFiles(ROOT);
-            console.log(`Found ${files.length} markdown files (excluding node_modules/tools/mdpdf).`);
-            let ok = 0, fail = 0;
 
+            console.log(`Found ${files.length} markdown files (excluding node_modules/tools/mdpdf).`);
+            // הדפס טעימה ראשונית כדי לאמת שאנחנו אכן פוגעים בקבצים שאתה מצפה:
+            console.log('First up to 10 files:\n' + files.slice(0, 10).map(f => ' - ' + f).join('\n'));
+
+            let ok = 0, fail = 0;
             for (const file of files) {
               try {
                 const mdContent = fs.readFileSync(file, 'utf8');
@@ -156,6 +165,7 @@ jobs:
                 const outPath = file.replace(/\.md$/i, '.pdf');
                 fs.mkdirSync(path.dirname(outPath), { recursive: true });
 
+                // NOTE: use filePath to help md-to-pdf resolve relative assets
                 const result = await mdToPdf({ content: wrapped, filePath: file }, {
                   pdf_options: {
                     format: 'A4',
@@ -165,7 +175,7 @@ jobs:
                   launch_options: { args: ['--no-sandbox', '--disable-setuid-sandbox'] }
                 });
 
-                if (result?.pdf) {
+                if (result && result.pdf) {
                   fs.writeFileSync(outPath, result.pdf);
                   console.log(`✅ OK: ${file} → ${outPath} ${rtl ? '[RTL]' : '[LTR]'}`);
                   ok++;
@@ -174,7 +184,7 @@ jobs:
                   fail++;
                 }
               } catch (e) {
-                console.warn(`❌ FAIL: ${file} — ${e.message}`);
+                console.warn(`❌ FAIL: ${file} — ${e && e.message ? e.message : e}`);
                 fail++;
               }
             }
